# python-katas

./: .gitignore  README.md  example1.py  example2.py  pyproject.toml
datastructures/: linkedlist.py
derivate/: main.py
square/: __init__.py  color.py  square.py
square/square/: color.py
