[tool.poetry]
name = "python-katas"
version = "0.1.0"
description = ""
authors = ["Unkn0wnN4m3 <87839850+Unkn0wnN4m3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
terminaltexteffects = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
